# ium2026

./: .dockerignore  .gitignore  Dockerfile  Jenkinsfile  Jenkinsfile-create-dataset  Jenkinsfile-create-stats  README.md  lab1.ipynb  main.py  model_def.py  model_wrapper.py  predict.py  predictions.csv  pyproject.toml  train.py
.gitea/workflows/: workflow.yml
.github/workflows/: workflow.yml
data/: diabetes.csv.dvc
scripts/: create_dataset.py  download_and_process.sh  process_data.py
