[project]
name = "uczenie-maszynowe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kagglehub>=1.0.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch",
    "joblib",
    "numpy",
    "mlflow==2.12.1",
    "protobuf==4.25.3",
    "dvc>=3.67.1",
]
